# paper-qa-ui

./: .gitignore  Architecture.md  BACKEND_SCHEMA.md  DEVELOPER.md  LICENSE  Makefile  README.md  RETRY_FUNCTIONALITY.md  TODO.md  UX-strategy.md  configs.md  debug_critique.py  env.template  plan.md  pyproject.toml  requirements_ux.txt  test_paper.txt  test_retry.py
.github/workflows/: main.yml
api/: config.py  main.py  retry_utils.py
archive/: TODO_2025-08-13.md
configs/: agent_optimized.json  amazon_bedrock.json  azure_openai.json  clinical_trials.json  clinical_trials_only.json  combined.json  comprehensive.json  comprehensive.json.backup  default.json  free_local.json  huggingface_free.json  local_only.json  ollama.json  openrouter.json  openrouter_ollama.json  openrouter_optimized.json  optimized_ollama.json  public_only.json
docs/: DEVELOPER.md  RATE_LIMIT_HANDLING.md  TODO.md  TROUBLESHOOTING.md  UX-strategy.md  flow.md  plan.md  ui-reorg.md  user_manual.md
docs/screen-recording/: .polycapture_meta
exports/: session_1755087717.json  session_1755093409.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Library.tsx  Query.tsx
scripts/: configure_rate_limits.py  create_demo_dataset.py  debug_ui_settings.py  demo_cli.py  download_demo_papers.py  kill_server.py  paper_qa_cli.py  run_gradio_ui.py  setup.py  test_agent_query.py  test_cli.py  test_complete_workflow.py  test_docs_query.py  test_document_indexing.py  test_file_upload.py  test_litellm.py  test_optimized_config.py  test_paperqa_direct.py  test_pdf_processing.py  test_rate_limits.py  test_simple.py  test_ui_approach.py  test_ui_functionality.py  test_ui_query.py  test_ui_simple.py  test_ui_with_optimized.py
semanticscholar/: SEARCH_RESULTS_SUMMARY.md  focused_test.py  run_test.py  test_semantic_search.py
src/: __init__.py  clients_query.py  config_manager.py  config_ui.py  gradio_ui.py  index_docs.py  paper_qa_core.py  paperqa2_core.py  paperqa2_ui.py  query_index.py  simple_local_qa.py  streaming.py  utils.py
src/cli/: __init__.py  clients_query.py  index_docs.py  paper_qa_cli.py  query_index.py  simple_local_qa.py
src/ui/: __init__.py  config_ui.py  paperqa2_ui.py  prompts.py
src/ux/backend/: __init__.py  app.py  mcp_server.py  schemas.py
src/ux/backend/runtime/: state.py
src/ux/backend/services/: conflicts_service.py  curation_service.py  paperqa_service.py  rewrite_service.py
tests/: picalm_questions.json  test_basic_setup.py  test_config.py  test_paper_qa_simple.py  test_settings.py  test_simple.py
